# live-bootcamp-project

./: compose.override.yml  compose.yml  docker.sh
.github/workflows/: prod.yml
auth-service/: Cargo.toml  Dockerfile
auth-service-macros/: Cargo.toml
auth-service-macros/src/: lib.rs
auth-service/src/: app_state.rs  lib.rs  main.rs
auth-service/src/domain/: data_stores.rs  email.rs  email_client.rs  error.rs  mod.rs  password.rs  user.rs
auth-service/src/routes/: login.rs  logout.rs  signup.rs  verify_2fa.rs  verify_token.rs
auth-service/src/services/: banned_token_store.rs  hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mock_email_client.rs  mod.rs
auth-service/src/services/data_stores/: hashmap_two_fa_code_store.rs  hashmap_user_store.rs  mod.rs  postgres_user_store.rs  redis_banned_token_store.rs  redis_two_fa_code_store.rs
auth-service/src/utils/: auth.rs  constants.rs
auth-service/tests/api/: helpers.rs  login.rs  logout.rs  root.rs  signup.rs  verify_2fa.rs  verify_token.rs
