[package]
name = "auth-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
#...
validator = "=0.20.0"
axum = "0.8.6"
tokio = { version = "1.48.0", features = ["full"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
uuid = { version = "1.18.1", features = ["v4", "serde"] }
async-trait = "0.1.89"
axum-extra = { version = "0.12.1", features = ["cookie"] }
jsonwebtoken = { version = "10.3.0", default-features = false, features = ["aws_lc_rs"] }

chrono = "0.4.42"
dotenvy = "0.15.7"
lazy_static = "1.5.0"

[dev-dependencies]
#...
fake = "=4.4.0"
rand = "0.9.2"
quickcheck = "1.0.3"
quickcheck_macros = "1.1.0"
reqwest = { version = "0.11.26", default-features = false, features = ["json", "cookies"] }
